Font Icons, php configs and gitignore changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
      volumes:
        - ./theme:/var/www/html/wp-content/themes/magnetic
        - ./plugins:/var/www/html/wp-content/plugins
+       - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
      environment:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_USER: wordpress
