--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "cssnano": "^4.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "iconfont-webpack-plugin": "^3.0.1",
     "postcss": "^7.0.2",
+    "postcss-font-magician": "^2.2.1",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^3.0.0",
     "postcss-partial-import": "^4.1.0",
     "postcss-preset-env": "^5.3.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
