--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "imagemin-webp-webpack-plugin": "^3.1.0",
     "imagemin-webpack-plugin": "^2.2.0",
     "normalize.css": "^8.0.0"
   }
